# nsh

./: CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  build.rs  build_rs_cov.profraw  install.ps1  install.sh  tarpaulin-report.json
scripts/: release-builds.sh  sync-site-install.sh
shell/: nsh.bash  nsh.fish  nsh.ps1  nsh.zsh
src/: ansi.rs  audit.rs  autoconfigure.rs  cli.rs  cliproxyapi.rs  coding_agent.rs  config.rs  connectivity.rs  context.rs  core_main.rs  daemon.rs  daemon_client.rs  daemon_db.rs  db.rs  debug_io.rs  display.rs  fast_cwd.rs  fast_ssh.rs  global_daemon.rs  history_import.rs  init.rs  json_display.rs  json_extract.rs  lib.rs  live_update.rs  main.rs  mcp.rs  model_defaults.rs  pty.rs  pty_windows.rs  pump.rs  query.rs  redact.rs  security.rs  shell_hooks.rs  shim.rs  shim_main.rs  skills.rs  stream_consumer.rs  streaming.rs  (+5 more)
src/memory/: bootstrap.rs  decay.rs  id.rs  llm_adapter.rs  mod.rs  privacy.rs  reflection.rs  schema.rs  temporal.rs  types.rs
src/memory/ingestion/: classifier.rs  consolidator.rs  extractor.rs  mod.rs  output_truncator.rs  router.rs
src/memory/retrieval/: mod.rs  prompt_builder.rs  ranker.rs  topic_extractor.rs
src/memory/search/: fts.rs  mod.rs
src/memory/store/: core.rs  episodic.rs  knowledge.rs  mod.rs  procedural.rs  resource.rs  semantic.rs
src/provider/: anthropic.rs  chain.rs  mod.rs  openai.rs  openai_compat.rs  openrouter.rs
src/tools/: ask_user.rs  chat.rs  command.rs  github.rs  glob.rs  grep_file.rs  install_mcp.rs  install_skill.rs  list_directory.rs  man_page.rs  manage_config.rs  memory.rs  mod.rs  patch_file.rs  read_file.rs  run_command.rs  scrollback.rs  search_history.rs  skill_exists.rs  uninstall_skill.rs  web_search.rs  write_file.rs
src/tui/: theme.rs
tests/: integration.rs
