[package]
name = "nsh"
version = "0.1.0"
edition = "2024"
description = "Natural Shell — AI-powered shell assistant"
license = "BSD-3-Clause"
repository = "https://github.com/fluffypony/nsh"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + streaming
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-stream = "0.2"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.38", features = ["bundled", "modern_sqlite", "functions"] }

# PTY (Rust POSIX APIs)
rustix = { version = "1", features = ["termios", "pty", "process", "pipe", "event", "stdio", "fs"] }

# POSIX FFI (fork, setsid, dup2, etc.)
libc = "0.2"

# Terminal
crossterm = "0.29"

# Config
dirs = "6"

# Error handling
anyhow = "1"

# Signals
signal-hook = { version = "0.3", features = ["iterator"] }

# Async traits (needed for dyn dispatch)
async-trait = "0.1"

# Regex (for grep_file tool)
regex = "1"

# Security
zeroize = { version = "1", features = ["derive"] }

# File walking (.gitignore-aware)
ignore = "0.4"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strip-ansi-escapes = "0.2"
vt100 = "0.16"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[dev-dependencies]
tempfile = "3"
