[package]
name = "nsh"
version = "0.1.0"
edition = "2024"
description = "Natural Shell — AI-powered shell assistant"
license = "BSD-3-Clause"
repository = "https://github.com/fluffypony/nsh"
default-run = "nsh"

[lib]
name = "nsh"
path = "src/lib.rs"

[[bin]]
name = "nsh"
path = "src/shim_main.rs"

[[bin]]
name = "nsh-core"
path = "src/core_main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + streaming
reqwest = { version = "0.13", features = ["json", "stream", "rustls"], default-features = false }
eventsource-stream = "0.2"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
toml_edit = "0.25"

# Database
rusqlite = { version = "0.38", features = ["bundled", "modern_sqlite", "functions"] }

# Terminal
crossterm = "0.29"
termimad = "0.34.1"

# Config
dirs = "6"

# Error handling
anyhow = "1"

# Async traits (needed for dyn dispatch)
async-trait = "0.1"

# Regex (for grep_file tool)
regex = "1"

# Security
zeroize = { version = "1", features = ["derive"] }

# File walking (.gitignore-aware)
ignore = "0.4"
glob = "0.3"

# SHA-256
sha2 = "0.10"

# Encryption (Knowledge Vault)
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"

# String similarity (episodic dedup)
strsim = "0.11"

# Misc
which = "8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strip-ansi-escapes = "0.2"
vt100 = "0.16"
shell-words = "1"
flate2 = "1"
hickory-resolver = "0.25"
tar = "0.4"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["termios", "pty", "process", "pipe", "event", "stdio", "fs"] }
libc = "0.2"
signal-hook = { version = "0.4", features = ["iterator", "extended-siginfo"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
wiremock = "0.6"

[features]
global-daemon-test = []
